--- a/Ball Game/version 1/index.html
+++ b/Ball Game/version 1/index.html
@@ -46,7 +46,9 @@
 			</div>
 		</div>
 
-		<div class="container" id = "container"></div>
+		<div class="container" id = "container">
+
+		</div>
 
 	</div>
 	<script src = "js/index.js"></script>
